Bug 677279 - Send momentum scroll events to the location of the last non-momentum scroll event. r=smichaud